# restapi-blog-platform

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  db_utils.py  main.py  schemas.py
app/models/: __init__.py  post.py  user.py
app/routers/: __init__.py  auth.py  posts.py  users.py
app/routes/: __init__.py  posts.py  users.py
app/services/: __init__.py  post_service.py  user_service.py
app/static/css/: style.css
app/static/js/: main.js
app/storage/: __init__.py  database.py
app/templates/: base.html  bookmarks.html  create_post.html  edit_post.html  index.html  post.html  posts.html  profile.html  users.html
app/utils/: validators.py
db/: schema.sql
doc/: db_struct.md
tests/: test_main.py
