name = "blog-platform"
version = "1.0.0"
description = "Платформа для ведения блога"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Arina", email = "arina@example.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.5",
    "email-validator>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pytest>=7.0",
    "types-requests>=2.0.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_equality = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.routers.*",
    "app.services.*",
    "app.storage.*",
    "app.main"
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tests.*"
]
disallow_untyped_defs = false
